crates/plotnik-lib/tests/02-parser/recovery_validation/ref_with_multiple_children.txt
Expr = (identifier)
(Expr (a) (b) @cap)
==== diagnostics ====
error: `Expr` is a reference and cannot have children
 --> query.ptk:2:7
  |
2 | (Expr (a) (b) @cap)
  |       ^^^^^^^^^^^^
  |
help: remove the children
  |
2 - (Expr (a) (b) @cap)
2 + (Expr )
  |
help: a reference reuses a definition as a whole: write `(Expr)`, or define a node kind to add children
